Linked renderer blocks to their respective cgBlocks Added support for adding/removing cgBlocks

--- a/demo/index.html
+++ b/demo/index.html
@@ -50,19 +50,19 @@
             {
                 "id": "0",
                 "type": "block",
-                "position": [10, 40],
+                "position": [120, 40],
                 "group": "0"
             },
             {
-                "id": "Scream",
+                "id": "1",
                 "type": "block",
                 "position": [240, 240],
                 "group": "Koala"
             },
             {
-                "id": "Scream",
+                "id": "2",
                 "type": "block",
-                "position": [240, 240],
+                "position": [400, 240],
                 "group": "Koala"
             }
         ]
@@ -81,6 +81,16 @@
             },
             {
                 "cgId": "1",
+                "cgOutputs": [
+                    {
+                        "cgType": "Point", // Will be used by default if not found
+                        "cgName": "out",
+                        "cgValueType": "Number" // Will be deduced by default from value if possible
+                    }
+                ]
+            },
+            {
+                "cgId": "2",
                 "cgOutputs": [
                     {
                         "cgType": "Point", // Will be used by default if not found
