--- a/cg-element.html
+++ b/cg-element.html
@@ -43,9 +43,9 @@ methods and properties.
         ready: function () {
             this._graph = new cg.Graph();
             this._loader = new cg.JSONLoader();
-            this._renderer = new cg.Renderer(this.$.svg, this.rendererData, this._graph);
-            this._renderer.create();
             this._loader.load(this._graph, this.graphData.blocks, this.graphData.connections);
+            this._renderer = new cg.Renderer(this.$.svg, this.rendererData, this._graph);
+            this._renderer.initialize();
         }
     });
 </script>
