--- a/demo/index.html
+++ b/demo/index.html
@@ -73,7 +73,7 @@
                 "cgId": "0",
                 "cgInputs": [
                     {
-                        "cgType": "Point", // Will be used by default if not found
+                        "cgType": "Point",
                         "cgName": "in",
                         "cgValueType": "Number"
                     }
@@ -83,9 +83,9 @@
                 "cgId": "1",
                 "cgOutputs": [
                     {
-                        "cgType": "Point", // Will be used by default if not found
+                        "cgType": "Point",
                         "cgName": "out",
-                        "cgValueType": "Number" // Will be deduced by default from value if possible
+                        "cgValueType": "Number"
                     }
                 ]
             },
@@ -93,9 +93,9 @@
                 "cgId": "2",
                 "cgOutputs": [
                     {
-                        "cgType": "Point", // Will be used by default if not found
+                        "cgType": "Point",
                         "cgName": "out",
-                        "cgValueType": "Number" // Will be deduced by default from value if possible
+                        "cgValueType": "Number"
                     }
                 ]
             }
