Added very basic renderPoints. Added blocks.cgName from JSON to override block's name.

--- a/demo/index.html
+++ b/demo/index.html
@@ -71,6 +71,7 @@
         "blocks": [
             {
                 "cgId": "0",
+                "cgName": "Process number",
                 "cgInputs": [
                     {
                         "cgType": "Point",
@@ -81,6 +82,7 @@
             },
             {
                 "cgId": "1",
+                "cgName": "Get number",
                 "cgOutputs": [
                     {
                         "cgType": "Point",
