Added brushed selection and collisions

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -4,6 +4,18 @@
         fill: hsla(0, 0%, 80%, 1);
     }
 
+    /**
+    * Selection brush
+    */
+    .cg-selection {
+        stroke: #fff;
+        fill-opacity: .125;
+        shape-rendering: crispEdges;
+    }
+
+    /**
+    * Blocks and groups
+    **/
     .cg-group > rect {
         fill: hsla(0, 0%, 80%, 0.2);
     }
