Start points rendering.

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -1,6 +1,9 @@
 <style is="custom-style">
-    .cg-title {
+    text {
         font-family: sans-serif;
+        fill: hsla(0, 0%, 60%, 1);
+    }
+    .cg-title {
         fill: hsla(0, 0%, 80%, 1);
     }
 
