Added group drop in

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -27,6 +27,10 @@
     .cg-group.selected > rect {
         fill: hsla(0, 0%, 95%, 0.2);
     }
+    .cg-group.active > rect {
+        stroke: hsl(358, 100%, 45%);
+        stroke-width: 2px;
+    }
 
     /**
      * Blocks
