Rendered blocks with points (but block size is still fix).

--- a/demo/index.html
+++ b/demo/index.html
@@ -322,7 +322,7 @@
                 ]
             },
             {"cgId": "3", "cgModel": "Entity.add_entity"},
-            {"cgId": "4", "cgType": "Variable", "cgValueType": "Number", "cgValue": 5},
+            {"cgId": "4", "cgType": "Variable", "cgValueType": "Number", "cgName": "size", "cgValue": 5},
             {"cgId": "5", "cgModel": "Entity.name"},
             {"cgId": "6", "cgModel": "add"}
         ],
