--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Codegraph - Demo</title>
+    <script src="../bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <style>
         body {
             margin: 0;
