Fixed css bugs.

--- a/themes/dude.html
+++ b/themes/dude.html
@@ -41,7 +41,7 @@
     .cg-block > rect {
         fill: hsla(0, 0%, 15%, .8);
     }
-    .cg-block.selected > rect {
+    .cg-block.cg-selected > rect {
         fill: hsla(0, 0%, 10%, .9);
     }
 
@@ -53,7 +53,6 @@
     }
     .cg-input circle, .cg-output circle,
     .cg-input path, .cg-output path {
-        stroke: #aaa;
         stroke-width: 1;
         stroke: #5990c7;
         fill: transparent;
