--- a/demo/index.html
+++ b/demo/index.html
@@ -47,7 +47,7 @@
                 "description": "Child",
                 "position": [10, 20],
                 "size": [100, 100],
-                "group": "0"
+                "parent": "0"
             }
         ],
         "blocks": [
@@ -55,19 +55,19 @@
                 "id": "0",
                 "type": "block",
                 "position": [120, 40],
-                "group": "0"
+                "parent": "0"
             },
             {
                 "id": "1",
                 "type": "block",
                 "position": [240, 240],
-                "group": "Koala"
+                "parent": "Koala"
             },
             {
                 "id": "2",
                 "type": "block",
                 "position": [400, 240],
-                "group": "Koala"
+                "parent": "Koala"
             },
             {
                 "id": "3",
