--- a/themes/dude.html
+++ b/themes/dude.html
@@ -28,8 +28,8 @@
             fill: hsla(0, 0%, 90%, 0.2);
     }
     .cg-group.cg-active > rect {
-        stroke: hsl(358, 100%, 45%);
-        stroke-width: 2px;
+        stroke: #5990c7;
+        stroke-width: 1px;
     }
 
     /**
